--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="menu">
   <div class="container">
     <div class="toggle"></div>
-  </div><span class="hidden"><a href="http://drunkxiao.github.io">我的博客 </a></span><span class="hidden"><a href="http://trunkx.us.kg">美女 </a></span><span class="hidden"><a href="http://fengjing.trunkx.us.kg">风景 </a></span><span class="hidden"><a href="http://cat.trunkx.us.kg">朋克猫</a></span>
+  </div><span class="hidden"><a href="#">我的博客 </a></span><span class="hidden"><a href="http://girl.trunkx.us.kg">美女 </a></span><span class="hidden"><a href="http://fengjing.trunkx.us.kg">风景 </a></span><span class="hidden"><a href="http://cat.trunkx.us.kg">朋克猫</a></span>
 </div>
 <!-- partial -->
   <script src="./js/jquery-2.1.3.min.js"></script>
